# ZeniiPO

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/web/: next.config.mjs  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  vitest.config.ts
apps/web/public/.well-known/: security.txt
apps/web/scripts/: extract-v1_8.mjs
apps/web/src/: instrumentation.ts  middleware.ts
apps/web/src/app/: apple-icon.tsx  global-error.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/(app)/: error.tsx  (+3 more)
apps/web/src/components/: app-switcher.tsx  cosmos-bg.tsx  sidebar-item.tsx  sidebar.tsx  topbar.tsx  user-menu.tsx  v1-data-bind.tsx  v1-interactivity.tsx  v1-modals.tsx
apps/web/src/lib/: python.ts
apps/web/tests/e2e/: anima-flow.spec.ts  responsive.spec.ts  security.spec.ts  smoke.spec.ts
scripts/: backtest-ipo-flow.mjs  backtest.mjs  migrate.mjs  parse-handbook.mjs  seed-anima-initial.mjs  test-phase-a.mjs  test-phase-b.mjs  test-phase-c.mjs
services/python/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/python/src/: __init__.py  anthropic_client.py  auth.py  config.py  deps.py  main.py  supabase_client.py
services/python/src/models/: council.py  monte_carlo.py
services/python/src/routers/: batch.py  council.py  health.py  monte_carlo.py
services/python/tests/: conftest.py  test_health.py
(+168 files in other folders)
